# cwru_baxter

./: README.md  TODO_arch  dev_notes  set_baxter_ros_master.sh  startup_notes
baxter_cartesian_moves/: CMakeLists.txt  README.md  package.xml
baxter_cartesian_moves/src/: arm_motion_interface.cpp  baxter_cart_move_as.cpp  cart_path_planner_lib.cpp  example_baxter_cart_move_action_client.cpp  test_cart_path_planner_lib.cpp
baxter_faces/: CMakeLists.txt  README.md  package.xml
baxter_faces/images/confusion/: shrug
baxter_faces/images/random_wink/: a_random.sh
baxter_faces/scripts/: ALL.py  approval.py  blink.py  confusion.py  disapproval.py  falling_asleep.py  happiness.py  idle.py  idle_bash.py  laughing.py  puppy.py  sleeping.py  sonar_detect.py  thinking.py  waking.py  wink.py  wink_bash.py
baxter_faces/scripts/bash/: ask.sh  confused_act.sh  sleeping.sh  waking.sh
baxter_gripper/: CMakeLists.txt  README.md  Readme.md  package.xml
baxter_gripper/src/: .dynamixel_torque_test_mak237.cpp  .dynamixel_torque_test_node_mak237.cpp  baxter_compliant_gripper.cpp  dynamixel_motor_node.cpp  dynamixel_sin_test.cpp  orig_dynamixel_motor_node.cpp
baxter_gripper/src/dxl_c_files/: ReadWrite.c
baxter_kinematics/: CMakeLists.txt  baxter_kinematics_notes  package.xml
baxter_kinematics/include/baxter_kinematics/: baxter_kinematics.h
baxter_kinematics/src/: baxter_kinematics.cpp  baxter_kinematics_test_jacobian_main.cpp  baxter_kinematics_test_main.cpp  baxter_kinematics_test_main2.cpp  baxter_kinematics_test_main3.cpp  baxter_kinematics_test_main3b.cpp  baxter_kinematics_test_main4.cpp
baxter_playfile_reader/: CMakeLists.txt  README.md  package.xml
baxter_playfiles/: CMakeLists.txt  README.md  beauty_queen_wave.jsp  package.xml
baxter_test_IK/: CMakeLists.txt  README.md  package.xml
baxter_test_ik/: CMakeLists.txt  README.md  package.xml
baxter_traj_streamer/: CMakeLists.txt  README.md  package.xml
baxter_traj_streamer/action/: traj.action
baxter_traj_streamer/include/baxter_traj_streamer/: baxter_traj_streamer.h
baxter_traj_streamer/src/: baxter_traj_interpolator_node.cpp  baxter_traj_streamer.cpp  baxter_traj_streamer_test_main.cpp  elbow_orbit_plan_main.cpp  elbow_orbit_plan_main2.cpp  get_and_save_r_arm_pose.cpp  test_init_cmd_main.cpp  traj_action_client.cpp  traj_action_client_pre_pose.cpp  traj_interpolator_as.cpp
build_scripts/: atlas.bashrc  atlas_user.bashrc  cwru_create_pkg.py  install_notes  laptop.bashrc
cartesian_moves/: CMakeLists.txt  README.md  cartesian_move_notes  package.xml  reachability_CMakeLists.txt  simple_CMakeLists.txt
cartesian_moves/action/: cartTraj.action
cartesian_moves/include/cartesian_moves/: arm_motion_interface_defs.h  cart_path_planner_lib.h
cartesian_moves/src/: arm_motion_interface.cpp  cart_move_hand_down_as.cpp  cart_path_planner_lib.cpp  cart_traj_action_client.cpp  cartesian_move_svc_client_test.cpp  test_cart_path_planner_lib.cpp  traj_action_client_pre_pose.cpp
coordinator/: CMakeLists.txt  README.md  package.xml
coordinator/src/: coordinator.cpp  object_grasp_frame_computer.cpp  test_get_model_frame.cpp
cwru_baxter_launch/: CMakeLists.txt  README.md  baxter_startup_recap_Aug_2015  cwru_baxter_nodes.launch  floor_base_xform.launch  kinect.launch  kinect_transform.launch  kinect_transform_sim.launch  package.xml  set_remote_master.sh  world_torso_xform.launch  yale_gripper_xform.launch
cwru_baxter_sim/: CMakeLists.txt  README.md  baxter.world  baxter_w_gripper.launch  baxter_world.launch  cwru_baxter.urdf  cwru_baxter_sim.launch  cwru_baxter_w_gripper.urdf.xacro  kinect_xform.launch  package.xml  test_pcl.launch
cwru_joint_space_planner/: CMakeLists.txt  README.md  package.xml
cwru_pcl_utils/: CMakeLists.txt  README.md  color_test_notes  package.xml
cwru_pcl_utils/include/cwru_pcl_utils/: cwru_pcl_utils.h
cwru_pcl_utils/models/: block_models_readme
cwru_pcl_utils/models/colored_block 2/: model-1_4.sdf  model.config
cwru_pcl_utils/src/: cwru_pcl_utils.cpp  cwru_pcl_utils_color_test.cpp  cwru_pcl_utils_color_test2.cpp  cwru_pcl_utils_example_main.cpp  cwru_pcl_utils_example_main2.cpp
cwru_srv/: CMakeLists.txt  README.md  package.xml
dynamixel_motor/: README.md
example_opencv/: CMakeLists.txt  README.md  package.xml
example_opencv/src/: find_blue_pixels_centroid.cpp  find_red_pixels_centroid.cpp  image_converter.cpp  images_timesync.cpp  snapshot.cpp
example_pcl/: CMakeLists.txt
example_sensor_guided_motion/: CMakeLists.txt  README.md  package.xml
example_sensor_guided_motion/launch/: baxter_sensor_guided_motion.launch
example_sensor_guided_motion/src/: arm_motion_commander_class.cpp  example_sensor_guided_motion_client.cpp
interactive_marker_node/: CMakeLists.txt  README.md  package.xml
move_gazebo_model/: CMakeLists.txt  package.xml
move_gazebo_model/src/: move_calibration_checkerboard.cpp  move_gazebo_bar_camera_init.cpp  move_gazebo_model.cpp  move_gazebo_model2.cpp  move_gazebo_model_bkup.cpp  move_gazebo_model_interactive.cpp
pcl_perception_node/: CMakeLists.txt  CMakeLists.txt.catkin_simple_old  README.md  package.xml
pcl_perception_node/include/: pcl_perception_defs.h
pcl_perception_node/src/: bed_of_nails_node.cpp  object_finder.cpp  pcd_save.cpp  pcd_transform_and_save.cpp  pcl_perception_node2.cpp
reachability/: CMakeLists.txt  package.xml  test_notes_reachability
simple_GUI/: glade2_example.glade  service_call_gui
simple_gui/: CMakeLists.txt  README_needs_updating.md  arm_actions.glade  arm_actions_gui  arm_actions_gui.c  baxter_sim_gui  baxter_sim_gui.c  baxter_sim_gui.glade  glade2_example.glade  how_to_compile  launcher_gui  launcher_gui.c  launcher_gui.glade  package.xml  perception_gui  perception_gui.c  perception_gui.glade  preception_gui  service_call_gui  service_call_gui.c
test_pkg/: CMakeLists.txt  README.md  package.xml
wsn_test_baxter_cmd/: CMakeLists.txt  README.md  package.xml
wsn_test_baxter_cmd/src/: example_publisher.cpp  wsn_test_baxter_cmd.cpp  wsn_test_baxter_cmd2.cpp  wsn_test_baxter_kbd.cpp
(+13 files in other folders)
